[gd_scene load_steps=7 format=3 uid="uid://cexrovdxbxapb"]

[ext_resource type="Script" uid="uid://dmr2nnkuvgtqr" path="res://Interface/GlobalInterface/UnitListMenuItem.gd" id="1_i6766"]
[ext_resource type="Texture2D" uid="uid://da0ofdcld5poq" path="res://Graphics/Portraits/simplified cartoon fierce menacing brown hairless Mexican chihuahua looking up isolated white backgr 09-02-2025 at 13-42-16.jpeg" id="2_5xqe5"]
[ext_resource type="PackedScene" uid="uid://bnwh3ltkopbuh" path="res://Interface/GlobalInterface/ReactiveProgressField.tscn" id="3_bele2"]
[ext_resource type="Script" uid="uid://bn22qne7p8gp8" path="res://Interface/GlobalInterface/ReactiveTextField.gd" id="4_pb6xb"]
[ext_resource type="PackedScene" uid="uid://cc3uq6b0rbj7n" path="res://Interface/PlayerMenuInterface/EquipmentSlot.tscn" id="7_wrwym"]
[ext_resource type="PackedScene" uid="uid://b3gllupgt2pit" path="res://Interface/GlobalInterface/ReactiveMultiField.tscn" id="9_je2iw"]

[node name="UnitListMenuItem" type="PanelContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -136.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MenuItemPanel"
script = ExtResource("1_i6766")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PortraitFrame" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_type_variation = &"PortraitFrame"

[node name="PortraitTexture" type="TextureRect" parent="HBoxContainer/PortraitFrame"]
show_behind_parent = true
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_5xqe5")
expand_mode = 1

[node name="StatsBlock" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/StatsBlock"]
layout_mode = 2
alignment = 1

[node name="Header" type="HBoxContainer" parent="HBoxContainer/StatsBlock/VBoxContainer"]
layout_mode = 2

[node name="Name" parent="HBoxContainer/StatsBlock/VBoxContainer/Header" instance=ExtResource("3_bele2")]
layout_mode = 2
theme_type_variation = &"FieldBig"

[node name="LevelAndClass" type="HBoxContainer" parent="HBoxContainer/StatsBlock/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Level" type="Label" parent="HBoxContainer/StatsBlock/VBoxContainer/Header/LevelAndClass"]
layout_mode = 2
script = ExtResource("4_pb6xb")
/linked_class = &"Adventurer"
/linked_property = &"level"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/StatsBlock/VBoxContainer"]
layout_mode = 2

[node name="MainStats" type="GridContainer" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="HitPoints" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="MagicPoints" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="spacer" type="Control" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats"]
layout_mode = 2

[node name="AttackPower" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="DefensePower" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="MagicPower" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="MagicDefense" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="Dexterity" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="Charisma" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="Luck" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer/MainStats" instance=ExtResource("3_bele2")]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FieldSmall"

[node name="ReactiveMultiField" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer" instance=ExtResource("9_je2iw")]
layout_mode = 2

[node name="WeaponSlot" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer" instance=ExtResource("7_wrwym")]
layout_mode = 2

[node name="ArmorSlot" parent="HBoxContainer/StatsBlock/VBoxContainer/HBoxContainer" instance=ExtResource("7_wrwym")]
layout_mode = 2

[node name="Traits" type="HBoxContainer" parent="HBoxContainer/StatsBlock/VBoxContainer"]
layout_mode = 2

[node name="ActionButtons" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1
